# static_ffmpeg

./: .gitignore  .gitmodules  CLAUDE.md  MANIFEST.in  README.md  activate  clean  install  lint  pyproject.toml  requirements.testing.txt  requirements.txt  setup.py  setupvirtualenv.py  test  tox.ini  upload_package.sh
.github/workflows/: build-cosmopolitan.yml  build-linux.yml  download-binaries.yml  push.yml  push_macos.yml  push_macos_arm.yml  push_macos_x86.yml  push_ubuntu.yml  push_ubuntu_arm.yml  push_ubuntu_x86.yml  push_win.yml
pyffmpeg/: run.py
pyffmpeg/linux/: ffmpeg_4.3.2-0+deb11u1ubuntu1_amd64.deb
static_ffmpeg/: __init__.py  _add_paths.py  add_paths.py  run.py
tests/: test_bug9.py  test_pyffmpeg.py  test_static_add_paths_weak.py  test_static_ffmpeg.py
